--- a/.github/workflows/docs-quality.yml
+++ b/.github/workflows/docs-quality.yml
@@ -1,91 +1,57 @@
-name: Documentation Quality
+name: Docs Quality
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  push:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
   markdown-lint:
-    name: Markdown Lint
+    name: Markdown lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Run Markdown Lint
-        uses: DavidAnson/markdownlint-cli2-action@v15
+      - name: Markdown lint (markdownlint-cli2)
+        uses: DavidAnson/markdownlint-cli2-action@v16
         with:
           globs: |
             **/*.md
-            !node_modules/**/*.md
 
   link-check:
-    name: Link Check
+    name: Link check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Check Markdown Links
-        uses: gaurav-nelson/github-action-markdown-link-check@v1
+      - name: Link checker (lychee)
+        uses: lycheeverse/lychee-action@v1
         with:
-          use-quiet-mode: 'yes'
-          use-verbose-mode: 'yes'
-          config-file: '.markdown-link-check.json'
-          folder-path: '.'
+          args: >
+            --verbose
+            --no-progress
+            --exclude-mail
+            --exclude localhost
+            --exclude 127.0.0.1
+            --timeout 20
+            --max-retries 2
+            **/*.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  mermaid-check:
-    name: Mermaid Diagram Check
+  docs-summary:
+    name: Docs quality summary
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Install Mermaid CLI
-        run: npm install -g @mermaid-js/mermaid-cli
-
-      - name: Check Mermaid Syntax
-        run: |
-          find . -name "*.md" -type f -exec grep -l "```mermaid" {} \; | while read file; do
-            echo "Checking Mermaid diagrams in $file"
-            mmdc -i "$file" -o /dev/null 2>&1 || echo "Warning: Mermaid syntax check skipped (install mmdc for full validation)"
-          done
-        continue-on-error: true
-
-  spell-check:
-    name: Spell Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Spell Check
-        uses: streetsidesoftware/cspell-action@v7
-        with:
-          files: "**/*.md"
-          config: "cspell.json"
-        continue-on-error: true
-
-  quality-summary:
-    name: Quality Summary
-    runs-on: ubuntu-latest
-    needs: [markdown-lint, link-check, mermaid-check]
+    needs: [ markdown-lint, link-check ]
     if: always()
     steps:
-      - name: Quality Check Summary
+      - name: Summary
         run: |
-          echo "## Documentation Quality Check Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Markdown Lint: ${{ needs.markdown-lint.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Link Check: ${{ needs.link-check.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Mermaid Check: ${{ needs.mermaid-check.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "All quality checks completed."
-
+          echo "Docs Quality checks completed."
+          echo "markdown-lint: ${{ needs.markdown-lint.result }}"
+          echo "link-check:    ${{ needs.link-check.result }}"
