--- a/.github/workflows/docs-quality.yml
+++ b/.github/workflows/docs-quality.yml
@@ -1,8 +1,9 @@
 name: Docs Quality
 
 on:
-  pull_request:
   push:
+    branches: [ "main" ]
+  pull_request:
     branches: [ "main" ]
 
 permissions:
@@ -44,14 +45,94 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  docs-summary:
+  mermaid-check:
+    name: Mermaid check
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install Mermaid CLI
+        run: npm install -g @mermaid-js/mermaid-cli
+
+      - name: Check Mermaid diagrams
+        run: |
+          TEMP_DIR=$(mktemp -d)
+          trap "rm -rf $TEMP_DIR" EXIT
+          
+          FOUND_MERMAID=false
+          BLOCK_COUNT=0
+          
+          for file in $(find . -name "*.md" -type f -not -path "./node_modules/*"); do
+            if grep -q '```mermaid' "$file"; then
+              FOUND_MERMAID=true
+              echo "Processing Mermaid blocks in: $file"
+              
+              IN_MERMAID=false
+              BLOCK_CONTENT=""
+              
+              while IFS= read -r line || [ -n "$line" ]; do
+                if [[ "$line" == '```mermaid' ]]; then
+                  IN_MERMAID=true
+                  BLOCK_CONTENT=""
+                elif [[ "$line" == '```' ]] && [[ "$IN_MERMAID" == "true" ]]; then
+                  if [[ -n "$BLOCK_CONTENT" ]]; then
+                    BLOCK_COUNT=$((BLOCK_COUNT + 1))
+                    temp_file="$TEMP_DIR/mermaid_${BLOCK_COUNT}.mmd"
+                    echo "$BLOCK_CONTENT" > "$temp_file"
+                    echo "Validating Mermaid block $BLOCK_COUNT from $file"
+                    mmdc -i "$temp_file" -o /dev/null 2>&1 && echo "  ✓ Block $BLOCK_COUNT is valid" || echo "  ⚠ Block $BLOCK_COUNT validation warning (non-blocking)"
+                  fi
+                  IN_MERMAID=false
+                  BLOCK_CONTENT=""
+                elif [[ "$IN_MERMAID" == "true" ]]; then
+                  BLOCK_CONTENT="${BLOCK_CONTENT}${line}"$'\n'
+                fi
+              done < "$file"
+            fi
+          done
+          
+          if [[ "$FOUND_MERMAID" == "false" ]]; then
+            echo "No Mermaid diagrams found in markdown files"
+          else
+            echo "Mermaid check completed: $BLOCK_COUNT blocks processed (non-blocking)"
+          fi
+
+  spell-check:
+    name: Spell check
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run Spell Check
+        uses: streetsidesoftware/cspell-action@v7
+        with:
+          files: "**/*.md"
+          config: "cspell.json"
+
+  quality-summary:
     name: Docs quality summary
     runs-on: ubuntu-latest
-    needs: [ markdown-lint, link-check ]
+    needs: [ markdown-lint, link-check, mermaid-check, spell-check ]
     if: always()
     steps:
       - name: Summary
         run: |
-          echo "Docs Quality checks completed."
-          echo "markdown-lint: ${{ needs.markdown-lint.result }}"
-          echo "link-check:    ${{ needs.link-check.result }}"
+          echo "## Documentation Quality Check Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Check | Status |" >> $GITHUB_STEP_SUMMARY
+          echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Markdown Lint | ${{ needs.markdown-lint.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Link Check | ${{ needs.link-check.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Mermaid Check | ${{ needs.mermaid-check.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Spell Check | ${{ needs.spell-check.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "✅ All quality checks completed." >> $GITHUB_STEP_SUMMARY
