--- a/.github/workflows/docs-quality.yml
+++ b/.github/workflows/docs-quality.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           globs: |
             **/*.md
+          configFile: ".markdownlint.json"
 
   link-check:
     name: Link check
@@ -107,7 +108,6 @@ jobs:
   spell-check:
     name: Spell check
     runs-on: ubuntu-latest
-    continue-on-error: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
